# DPApp

./: .gitignore  CHANGELOG_2026-07-10.md  CHANGELOG_2026-07-11.md  CHANGELOG_2026-07-11_distributed-icp.md  CHANGELOG_2026-07-12_benchmark-alignment-persistence.md  CHANGELOG_2026-07-12_chunk-float-offset-and-testing.md  CHANGELOG_2026-07-12_float-offset-rebase.md  CMakeLists.txt  DPApp.sln  Makefile  README.md  test_console.html
BimImport/: BimImport.cpp  BimImport.h  BimImport.vcxproj  BimImport.vcxproj.filters
LasImport/: LasImport.cpp  LasImport.h  LasImport.vcxproj  LasImport.vcxproj.filters
LasTest/: LasLibWrapper.hpp  LasTest.cpp  LasTest.vcxproj  LasTest.vcxproj.filters
MasterApp/: MasterApp.vcxproj  MasterApp.vcxproj.filters  MasterApplication.cpp  MasterApplication.h  MasterApplication_Agent.cpp  MasterApplication_CLI.cpp  MasterApplication_ICP.cpp  MasterApplication_REST.cpp  MiniJson.h  RESTApiServer.h  RuntimeConfig.h  ThreadPool.h
MasterLauncher/: LauncherService.cpp  MasterLauncher.vcxproj  MasterLauncher.vcxproj.filters
SlaveAgent/: SlaveAgent.vcxproj  SlaveAgent.vcxproj.filters  agent.cpp
SlaveApp/: SlaveApp.vcxproj  SlaveApp.vcxproj.filters  SlaveApplication.cpp
config/: master.ini  slave.ini
data/: sample_points.xyz
doc/: DPApp_ICP_Technical_Documentation.docx  시스템 구성.pptx  프로그램 설명.xlsx
include/: BinaryReadWriter.hpp  DefinePointType.hpp  IcpTypes.h  LasLibWrapper.hpp  LaslibReader.hpp  LaslibWriter.hpp  Logger.h  MiniJson.h  NetworkManager.h  Pc2Reader.hpp  PointCloudTypes.h  RESTApiServer.h  ReadPointFile.h  RuntimeConfig.h  (+4 more)
(+110 files in other folders)
